2008-04-29  Akira TAGOH  <tagoh@redhat.com>

	* utils/imsettings-reload.c (main): exit if opening session bus
	is failed.

2008-04-28  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/protocol.c (xim_protocol_process_event): proper casting
	to the pointer.

2008-04-25  Akira TAGOH  <tagoh@redhat.com>

	* imsettings/Makefile.am: correct build order.

	* src/factory.c (imsettings_manager_real_what_im_is_running):
	real function to check what IM is running.

	* imsettings/imsettings-request.c (imsettings_request_what_im_is_running):
	new function.

	* imsettings/imsettings-observer.c (imsettings_what_input_method_is_running):
	new function.

	* imsettings/imsettings.xml (WhatInputMethodIsRunning): new method.

	* utils/imsettings-list.c (main): Show "*" if IM is really running and
	"-" for not running but is supposed to run by default for user.

2008-04-23  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/protocol.c (xim_protocol_swap32): Fix a typo.

2008-04-14  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (_source_dispatch): Use G_GSIZE_FORMAT macro
	instead of "d".

	* backends/xim/protocol.c (xim_protocol_process_event):
	Use GUINT_TO_POINTER macro instead of direct casting.
	(xim_protocol_send): Use G_GSIZE_FORMAT macro instead of "d".

	* backends/xim/connection.c (xim_connection_forward_client_message_event):
	Use G_GSIZE_FORMAT macro instead of "d".

	* backends/gconf/Makefile.am (main.c): Add deps of
	gconf-imsettings-glue.h to ensure its creation at bootstrap.

	* imsettings/Makefile.am (imsettings-observer.c): Add deps of
	stamp-bindings.h to ensure its creation at bootstrap.

2008-04-14  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_finalize): destroy GSource.

2008-04-10  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/server.c (xim_server_set_property): create a loopback
	server as needed.

	* backends/xim/protocol.c (xim_protocol_real_open): fix a typo.